--- a/TicketsControl/tickets/templates/administracion/colasatencion.html
+++ b/TicketsControl/tickets/templates/administracion/colasatencion.html
@@ -178,8 +178,32 @@
         });
     });
     window.onload = function () {
-        cargarAgentes();
+        cargarDepartamentos();
     };
+
+    function cargarDepartamentos() {
+        var select2 = document.getElementById("departamento");
+
+        var url = "/obtener-departamentos/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                select2.options.length = 0;
+                for (var key in data) {
+                    if (data.hasOwnProperty(key)) {
+                        var option = document.createElement("option");
+                        option.value = data[key];
+                        option.text = data[key];
+                        select2.add(option);
+                    }
+                }
+                cargarAgentes();
+            }
+        };
+        request.send();
+    }
 
     function cargarAgentes() {
         var select = document.getElementById("departamento").value;
@@ -198,8 +222,6 @@
                         option.value = key;
                         option.text = data[key];
                         select2.add(option);
-
-                        
                     }
                 }
             }
