--- a/TicketsControl/tickets/templates/administracion/admin.html
+++ b/TicketsControl/tickets/templates/administracion/admin.html
@@ -26,7 +26,7 @@
 
 {% endblock background %}
 {% block content %}
-<div class="container mt-5">
+<div class="container mt-2">
     <!-- Example row of columns -->
     <div class="row">
         <h5 class="tituloG mb-5">GESTIÓN DE DEPARTAMENTOS</h5>
@@ -98,7 +98,7 @@
                 </tbody>
             </table>
             <button type="button" data-bs-toggle="modal" data-bs-target="#modal_tramite" onclick="cargarDepartamentos()"
-                class="btn btnStyle">Agregar Tramite</button>
+                class="btn btnStyle">Agregar Trámite</button>
         </div>
     </div>
     <hr>
