--- a/TicketsControl/tickets/templates/ticket/ticketmaker.html
+++ b/TicketsControl/tickets/templates/ticket/ticketmaker.html
@@ -11,21 +11,29 @@
                 <main class="form-signin">
                     <div class="row">
                         {% for departamento in departamentos %}
-                        <div class="col-md-6 mb-3">
-                            <div class="">
-                                <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-2 pb-2"
-                                    type="button" id="loading-indicator" 
-                                    {% if departamento.tramitesDepartamento %} 
-                                    data-bs-toggle="modal"data-bs-target="#modal_tramites"
-                                    onclick="cargar_tramites('{{ departamento.pk }}')" 
-                                    {% else %} 
-                                    onclick="crear_ticket('{{ departamento.pk }}')"
-                                    {% endif %}
-                                    ><p style="font-size: 30px;" class="mt-3 mb-3">{{ departamento.nombre }}</p></button>
-                                </div>
-                            </div>
+                        {% if forloop.last and par %}
+                        <div class="col-md-12 mb-3" style="text-align: center;">
+                                <button class="btnStyle w-50 btn btn-lg fw-bold pt-2 pb-2"
+                                type="button" id="loading-indicator" 
+                                {% if departamento.tramitesDepartamento %} 
+                                data-bs-toggle="modal"data-bs-target="#modal_tramites"
+                                onclick="cargar_tramites('{{ departamento.pk }}')" 
+                                {% else %} 
+                                onclick="crear_ticket('{{ departamento.pk }}')"
+                                {% endif %}><p style="font-size: 30px;" class="mt-3 mb-3">{{ departamento.nombre }}</p></button>
                         </div>
+                        {% else %}
+                        <div class="col-md-6 mb-3">
+                                <button class="btnStyle w-100 btn btn-lg fw-bold pt-2 pb-2"
+                                type="button" id="loading-indicator" 
+                                {% if departamento.tramitesDepartamento %} 
+                                data-bs-toggle="modal"data-bs-target="#modal_tramites"
+                                onclick="cargar_tramites('{{ departamento.pk }}')" 
+                                {% else %} 
+                                onclick="crear_ticket('{{ departamento.pk }}')"
+                                {% endif %}><p style="font-size: 30px;" class="mt-3 mb-3">{{ departamento.nombre }}</p></button>
+                        </div>
+                        {% endif %}
                         {% endfor %}
                     <div class="row mt-2" style="justify-content: center;">
                         <img src="{% static 'img/uia_logo.png' %}" alt="" style="width: 170px; height: 85px;">
